--- a/{{cookiecutter.repo_name}}/conf/tox.ini
+++ b/{{cookiecutter.repo_name}}/conf/tox.ini
@@ -24,7 +24,7 @@ commands =
 setenv =
     SPELLCHECK = 1
 commands =
-    sphinx-build -b spelling docs dist/docs
+    sphinx-build -b spelling docs/source dist/docs
 usedevelop = true
 deps =
     -r{toxinidir}/docs/requirements.txt
@@ -36,8 +36,8 @@ whitelist_externals =
     rm
 commands =
     rm -rf dist/docs
-    sphinx-build -b linkcheck docs dist/docs
-    sphinx-build -b html docs dist/docs
+    sphinx-build -b linkcheck docs/source dist/docs
+    sphinx-build -b html docs/source dist/docs
 usedevelop = true
 deps =
     -r{toxinidir}/docs/requirements.txt
